fixed z-index for sidebar

--- a/public/black/css/black-dashboard.css
+++ b/public/black/css/black-dashboard.css
@@ -14861,7 +14861,7 @@ table.tablesorter thead tr .headerSortDown {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2000;
   background-size: cover;
   background-position: center center;
   display: block;
